.antlr/RadinGrammerParser.java
// Generated from e:/Abdoreza Sevadi Projects/Model Checker/RadinGrammer.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RadinGrammerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PAS_BEDEH=1, BEBIN=2, TAZE=3, KHOD=4, SAKHTAR=5, BIYAVAR=6, GHALAMRO=7, 
		KHALI=8, KARAT=9, HARF=10, MATN=11, BOOLEAN=12, ASHARI=13, SHOMAREH=14, 
		GUZAR=15, GOSTASHT=16, GAH=17, TA_VAGTI=18, VAGARNA=19, BOOD=20, AGE=21, 
		SHALAQ=22, SARANYAM=23, SHIKAR=24, AZMOON=25, GHAIR_AZ_IN=26, VAZIYAT=27, 
		GOZINESH=28, BEGIR=29, BENEZIS=30, VOID=31, KHATA_SEFR=32, BIRON_AZ_MARZ=33, 
		POCH_ANDESH=34, KARDAR_NARO=35, DOROST=36, GHALAT=37, AND=38, OR=39, ASSIGN=40, 
		PLUS_ASSIGN=41, MINUS_ASSIGN=42, MULT_ASSIGN=43, DIV_ASSIGN=44, EQ=45, 
		NEQ=46, LT=47, GT=48, LE=49, GE=50, PLUS=51, MINUS=52, MULT=53, DIV=54, 
		MOD=55, POW=56, DOT=57, COMMA=58, SEMICOLON=59, COLON=60, LPAREN=61, RPAREN=62, 
		LBRACE=63, RBRACE=64, LBRACK=65, RBRACK=66, IntegerLiteral=67, FloatingPointLiteral=68, 
		StringLiteral=69, CharLiteral=70, IDENTIFIER=71, LINE_COMMENT=72, BLOCK_COMMENT=73, 
		WS=74, ERROR=75;
	public static final int
		RULE_compilationUnit = 0, RULE_ghalamroDeclaration = 1, RULE_packageName = 2, 
		RULE_biyavarDeclaration = 3, RULE_importPath = 4, RULE_topLevelDeclaration = 5, 
		RULE_variableDeclaration = 6, RULE_type = 7, RULE_functionDeclaration = 8, 
		RULE_returnType = 9, RULE_parameterList = 10, RULE_parameter = 11, RULE_classDeclaration = 12, 
		RULE_classBody = 13, RULE_classMember = 14, RULE_methodDeclaration = 15, 
		RULE_block = 16, RULE_statement = 17, RULE_assignmentStatement = 18, RULE_leftHandSide = 19, 
		RULE_assignmentOperator = 20, RULE_ifStatement = 21, RULE_whileStatement = 22, 
		RULE_forStatement = 23, RULE_forInit = 24, RULE_forUpdate = 25, RULE_switchStatement = 26, 
		RULE_switchCase = 27, RULE_defaultCase = 28, RULE_tryStatement = 29, RULE_catchClause = 30, 
		RULE_exceptionType = 31, RULE_finallyClause = 32, RULE_returnStatement = 33, 
		RULE_breakStatement = 34, RULE_continueStatement = 35, RULE_throwStatement = 36, 
		RULE_ioStatement = 37, RULE_printStatement = 38, RULE_inputStatement = 39, 
		RULE_expressionStatement = 40, RULE_expression = 41, RULE_assignment = 42, 
		RULE_logicalOr = 43, RULE_logicalAnd = 44, RULE_equality = 45, RULE_comparison = 46, 
		RULE_addition = 47, RULE_multiplication = 48, RULE_exponentiation = 49, 
		RULE_unary = 50, RULE_postfix = 51, RULE_primary = 52, RULE_objectCreation = 53, 
		RULE_argumentList = 54, RULE_expressionList = 55, RULE_literal = 56, RULE_booleanLiteral = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "ghalamroDeclaration", "packageName", "biyavarDeclaration", 
			"importPath", "topLevelDeclaration", "variableDeclaration", "type", "functionDeclaration", 
			"returnType", "parameterList", "parameter", "classDeclaration", "classBody", 
			"classMember", "methodDeclaration", "block", "statement", "assignmentStatement", 
			"leftHandSide", "assignmentOperator", "ifStatement", "whileStatement", 
			"forStatement", "forInit", "forUpdate", "switchStatement", "switchCase", 
			"defaultCase", "tryStatement", "catchClause", "exceptionType", "finallyClause", 
			"returnStatement", "breakStatement", "continueStatement", "throwStatement", 
			"ioStatement", "printStatement", "inputStatement", "expressionStatement", 
			"expression", "assignment", "logicalOr", "logicalAnd", "equality", "comparison", 
			"addition", "multiplication", "exponentiation", "unary", "postfix", "primary", 
			"objectCreation", "argumentList", "expressionList", "literal", "booleanLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'pas_bedeh'", "'bebin'", "'taze'", "'khod'", "'sakhtar'", "'biyavar'", 
			"'ghalamro'", "'khali'", "'karat'", "'harf'", "'matn'", "'boolean'", 
			"'ashari'", "'shomareh'", "'guzar'", "'gostasht'", "'gah'", "'ta_vagti'", 
			"'vagarna'", "'bood'", "'age'", "'shalaq'", "'saranyam'", "'shikar'", 
			"'azmoon'", "'ghair_az_in'", "'vaziyat'", "'gozinesh'", "'begir'", "'benezis'", 
			"'void'", "'KhataSefr'", "'BironAzMarz'", "'PochAndesh'", "'KardarNaro'", 
			"'dorost'", "'ghalat'", "'AND'", "'OR'", "'='", "'+='", "'-='", "'*='", 
			"'/='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'**'", "'.'", "','", "';'", "':'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PAS_BEDEH", "BEBIN", "TAZE", "KHOD", "SAKHTAR", "BIYAVAR", "GHALAMRO", 
			"KHALI", "KARAT", "HARF", "MATN", "BOOLEAN", "ASHARI", "SHOMAREH", "GUZAR", 
			"GOSTASHT", "GAH", "TA_VAGTI", "VAGARNA", "BOOD", "AGE", "SHALAQ", "SARANYAM", 
			"SHIKAR", "AZMOON", "GHAIR_AZ_IN", "VAZIYAT", "GOZINESH", "BEGIR", "BENEZIS", 
			"VOID", "KHATA_SEFR", "BIRON_AZ_MARZ", "POCH_ANDESH", "KARDAR_NARO", 
			"DOROST", "GHALAT", "AND", "OR", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
			"MULT_ASSIGN", "DIV_ASSIGN", "EQ", "NEQ", "LT", "GT", "LE", "GE", "PLUS", 
			"MINUS", "MULT", "DIV", "MOD", "POW", "DOT", "COMMA", "SEMICOLON", "COLON", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "IntegerLiteral", 
			"FloatingPointLiteral", "StringLiteral", "CharLiteral", "IDENTIFIER", 
			"LINE_COMMENT", "BLOCK_COMMENT", "WS", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RadinGrammer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RadinGrammerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RadinGrammerParser.EOF, 0); }
		public GhalamroDeclarationContext ghalamroDeclaration() {
			return getRuleContext(GhalamroDeclarationContext.class,0);
		}
		public List<BiyavarDeclarationContext> biyavarDeclaration() {
			return getRuleContexts(BiyavarDeclarationContext.class);
		}
		public BiyavarDeclarationContext biyavarDeclaration(int i) {
			return getRuleContext(BiyavarDeclarationContext.class,i);
		}
		public List<TopLevelDeclarationContext> topLevelDeclaration() {
			return getRuleContexts(TopLevelDeclarationContext.class);
		}
		public TopLevelDeclarationContext topLevelDeclaration(int i) {
			return getRuleContext(TopLevelDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GHALAMRO) {
				{
				setState(116);
				ghalamroDeclaration();
				}
			}

			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BIYAVAR) {
				{
				{
				setState(119);
				biyavarDeclaration();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2147516196L) != 0) || _la==IDENTIFIER) {
				{
				{
				setState(125);
				topLevelDeclaration();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GhalamroDeclarationContext extends ParserRuleContext {
		public TerminalNode GHALAMRO() { return getToken(RadinGrammerParser.GHALAMRO, 0); }
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(RadinGrammerParser.SEMICOLON, 0); }
		public GhalamroDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ghalamroDeclaration; }
	}

	public final GhalamroDeclarationContext ghalamroDeclaration() throws RecognitionException {
		GhalamroDeclarationContext _localctx = new GhalamroDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ghalamroDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(GHALAMRO);
			setState(134);
			packageName();
			setState(135);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageNameContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(RadinGrammerParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(RadinGrammerParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(RadinGrammerParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(RadinGrammerParser.DOT, i);
		}
		public PackageNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageName; }
	}

	public final PackageNameContext packageName() throws RecognitionException {
		PackageNameContext _localctx = new PackageNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packageName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(IDENTIFIER);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(138);
				match(DOT);
				setState(139);
				match(IDENTIFIER);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BiyavarDeclarationContext extends ParserRuleContext {
		public TerminalNode BIYAVAR() { return getToken(RadinGrammerParser.BIYAVAR, 0); }
		public ImportPathContext importPath() {
			return getRuleContext(ImportPathContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(RadinGrammerParser.SEMICOLON, 0); }
		public BiyavarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_biyavarDeclaration; }
	}

	public final BiyavarDeclarationContext biyavarDeclaration() throws RecognitionException {
		BiyavarDeclarationContext _localctx = new BiyavarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_biyavarDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(BIYAVAR);
			setState(146);
			importPath();
			setState(147);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportPathContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(RadinGrammerParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(RadinGrammerParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(RadinGrammerParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(RadinGrammerParser.DOT, i);
		}
		public TerminalNode MULT() { return getToken(RadinGrammerParser.MULT, 0); }
		public ImportPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importPath; }
	}

	public final ImportPathContext importPath() throws RecognitionException {
		ImportPathContext _localctx = new ImportPathContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importPath);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(IDENTIFIER);
			setState(154);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(150);
					match(DOT);
					setState(151);
					match(IDENTIFIER);
					}
					} 
				}
				setState(156);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(157);
				match(DOT);
				setState(158);
				match(MULT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelDeclarationContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public TopLevelDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDeclaration; }
	}

	public final TopLevelDeclarationContext topLevelDeclaration() throws RecognitionException {
		TopLevelDeclarationContext _localctx = new TopLevelDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_topLevelDeclaration);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KHALI:
			case KARAT:
			case HARF:
			case MATN:
			case BOOLEAN:
			case ASHARI:
			case SHOMAREH:
			case VOID:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				variableDeclaration();
				}
				break;
			case BEBIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				functionDeclaration();
				}
				break;
			case SAKHTAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				classDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(RadinGrammerParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(RadinGrammerParser.SEMICOLON, 0); }
		public TerminalNode ASSIGN() { return getToken(RadinGrammerParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			type();
			setState(167);
			match(IDENTIFIER);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(168);
				match(ASSIGN);
				setState(169);
				expression();
				}
			}

			setState(172);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode SHOMAREH() { return getToken(RadinGrammerParser.SHOMAREH, 0); }
		public TerminalNode MATN() { return getToken(RadinGrammerParser.MATN, 0); }
		public TerminalNode ASHARI() { return getToken(RadinGrammerParser.ASHARI, 0); }
		public TerminalNode BOOLEAN() { return getToken(RadinGrammerParser.BOOLEAN, 0); }
		public TerminalNode KARAT() { return getToken(RadinGrammerParser.KARAT, 0); }
		public TerminalNode HARF() { return getToken(RadinGrammerParser.HARF, 0); }
		public TerminalNode KHALI() { return getToken(RadinGrammerParser.KHALI, 0); }
		public TerminalNode VOID() { return getToken(RadinGrammerParser.VOID, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RadinGrammerParser.IDENTIFIER, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_la = _input.LA(1);
			if ( !(((((_la - 8)) & ~0x3f) == 0 && ((1L << (_la - 8)) & -9223372036846387073L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode BEBIN() { return getToken(RadinGrammerParser.BEBIN, 0); }
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(RadinGrammerParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(RadinGrammerParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(RadinGrammerParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(BEBIN);
			setState(177);
			returnType();
			setState(178);
			match(IDENTIFIER);
			setState(179);
			match(LPAREN);
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 8)) & ~0x3f) == 0 && ((1L << (_la - 8)) & -9223372036846387073L) != 0)) {
				{
				setState(180);
				parameterList();
				}
			}

			setState(183);
			match(RPAREN);
			setState(184);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnTypeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(RadinGrammerParser.VOID, 0); }
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_returnType);
		try {
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				type();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				match(VOID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RadinGrammerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RadinGrammerParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
	}
